--- a/exercises/new-todo.html
+++ b/exercises/new-todo.html
@@ -1,4 +1,11 @@
+<head>
+    <link rel="stylesheet" href="main.css">
+</head>
 <body>
+    <a href="index.html">Home</a>
+    <a href="todo.html">Find a Todo</a>
+    <a href="new-todo.html">New Todo</a>
+    <a href="edit-todo.html">Edit Todo</a>
     <fieldset>
         <legend>TODO</legend>
         <label>
@@ -17,47 +24,49 @@
     </fieldset>
 </body>
 <script>
-/*  {
-    "userId": 1,
-    "id": 1,
-    "title": "delectus aut autem",
-    "completed": false
-  },  */
-  const add = document.getElementById("add");
-  const title = document.getElementById("title");
-  const completed = document.getElementById("completed");
-  const userId = document.getElementById("userId");
-  
-  add.addEventListener("click", e=>{
+    /*  {
+        "userId": 1,
+        "id": 1,
+        "title": "delectus aut autem",
+        "completed": false
+      },  */
+    const add = document.getElementById("add");
+    const title = document.getElementById("title");
+    const completed = document.getElementById("completed");
+    const userId = document.getElementById("userId");
 
-    const data = { //CREATE NEW OBJECT
-        userID: userId.value,
-        title: title.value,
-        completed: completed.checked
-    };
+    add.addEventListener("click", e => {
 
-    const textJSON = JSON.stringify(data);
+        const data = { //CREATE NEW OBJECT
+            userID: userId.value,
+            title: title.value,
+            completed: completed.checked
+        };
 
-    fetch("https://jsonplaceholder.typicode.com/todos", { 
-        method: "POST",
-        body: textJSON, 
-        headers: {
-            "Content-type": "application/json; charset=UTF-8"
-        }
-     })
-     .then(
-        response => response.json()
-        ) 
-     .then(json => { 
-        document.body.innerHTML += `<pre>${JSON.stringify(json,undefined,4)}</pre>`
+        const textJSON = JSON.stringify(data);
 
-        // If the POST finishes successfully, ... 
-     })
-     .catch(err => { 
-        // If the POST returns an error, ... 
-    });
+        fetch("https://jsonplaceholder.typicode.com/todos", {
+            method: "POST",
+            body: textJSON,
+            headers: {
+                "Content-type": "application/json; charset=UTF-8"
+            }
+        })
+            .then(
+                response => response.json()
+            )
+            .then(json => {
+                const pre = document.createElement("pre")
+                pre.innerHTML += `<pre>${JSON.stringify(json, undefined, 4)}</pre>`;
+                document.body.appendChild(pre);
 
-    
-    
-  }); // END CLICK LISTENER
+                // If the POST finishes successfully, ... 
+            })
+            .catch(err => {
+                // If the POST returns an error, ... 
+            });
+
+
+
+    }); // END CLICK LISTENER
 </script>
