--- a/Courses/index.html
+++ b/Courses/index.html
@@ -1,10 +1,13 @@
 <body>
+<a href="create.html">Create New Course</a>
+
     <table id="userTable" border="1">
         <thread>
             <tr>
                 <th>Department</th>
                 <th>Course Number</th>
                 <th>Title</th>
+                <th>Actions</th>
             </tr>
         </thread>
         <tbody id="tBody"></tbody>
@@ -22,6 +25,8 @@
                     ${course.courseNum}
                 </td><td>
                     ${course.courseName}
+                </td><td>
+                    <a href="delete.html?courseid=${course.id}"> Delete </a>
                 </td>
             </tr>
             `; 
